// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tab > Should support tab id > id with escape # 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tab id > id with escape # 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tab id > id with multiple # 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0" data-id="def">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0" data-id="def">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tab id > id with multiple # 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0" data-id="def">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0" data-id="def">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tab id > id with space 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0" data-id="id with space">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0" data-id="id with space">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tab id > id with space 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0" data-id="id with space">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0" data-id="id with space">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tab id > should handle tab with trailing spaces but no ID 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>content</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tab id > simple id 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0" data-id="id">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0" data-id="id">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tab id > simple id 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0" data-id="id">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0" data-id="id">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tabs id > id with space 1`] = `
"<div class="tabs-tabs-wrapper" data-id="id with space">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tabs id > id with space 2`] = `
"<div class="tabs-tabs-wrapper" data-id="id with space">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tabs id > should handle tabs with empty ID 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>content</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tabs id > should handle tabs with only spaces before ID 1`] = `
"<div class="tabs-tabs-wrapper" data-id="id">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>content</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tabs id > simple id 1`] = `
"<div class="tabs-tabs-wrapper" data-id="event">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > Should support tabs id > simple id 2`] = `
"<div class="tabs-tabs-wrapper" data-id="event">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > active > should handle :active 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > active > should handle :active 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > active > should handle multiple active tabs (only first one stays active) 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button active" data-tab="0" data-active>1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content active" data-index="0" data-active="">
<p>1</p>
</div>
<div class="tabs-tab-content" data-index="1">
<p>2</p>
</div>
  </div>
</div>
"
`;

exports[`tab > active > should resolve first :active 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>test2</button>
    <button type="button" class="tabs-tab-button" data-tab="2">test3</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
<div class="tabs-tab-content" data-index="2">
<p>A <strong>bold</strong> text 3.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > active > should resolve first :active 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>test2</button>
    <button type="button" class="tabs-tab-button" data-tab="2">test3</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
<div class="tabs-tab-content" data-index="2">
<p>A <strong>bold</strong> text 3.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > ending correctly > should end container when a negative indent text found 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
<p>test</p>
"
`;

exports[`tab > ending correctly > should end container when a negative indent text found 2`] = `
"<ul>
<li>
<p>item 1</p>
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
</li>
</ul>
<p>test</p>
"
`;

exports[`tab > ending correctly > should not close tabs with trailing content 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>content
::: invalid</p>
</div>
  </div>
</div>
"
`;

exports[`tab > ending correctly > should not end when ending marker number is less than start 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.
:::</p>
</div>
<div class="tabs-tab-content" data-index="1">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > hidden content > should ignore items before first @tab 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > hidden content > should ignore items before first @tab 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > marker > should handle tab with partial active marker 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">valid</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>content
@tab:act</p>
</div>
  </div>
</div>
"
`;

exports[`tab > marker > should not match @tab without space or title 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">valid</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>Valid content
@tab
@tab
@tabtitle</p>
</div>
  </div>
</div>
"
`;

exports[`tab > marker > should support being interrupted by tab 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<ul>
<li>item
@tab test2
content</li>
</ul>
</div>
  </div>
</div>
"
`;

exports[`tab > nesting > should handle nested tabs with more depth 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">root</button>
    <button type="button" class="tabs-tab-button" data-tab="1">nested</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    
  </div>
  <div class="tabs-tabs-container">
  </div>
</div>
</div>
<div class="tabs-tab-content" data-index="1">
<p>content</p>
</div>
  </div>
</div>
<p>:::</p>
"
`;

exports[`tab > nesting > should not parse @tab in fence content 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>To declare tabs, use the following syntax:</p>
<pre><code>@tab
</code></pre>
</div>
  </div>
</div>
"
`;

exports[`tab > nesting > should render nested tabs 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
    <button type="button" class="tabs-tab-button active" data-tab="2" data-active>test3</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A text 1.</p>
</div>
<div class="tabs-tab-content" data-index="1">
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">sub-test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>sub-test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
</div>
<div class="tabs-tab-content active" data-index="2" data-active="">
<p>A <strong>bold</strong> text 3.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > nesting > should support nesting with others 1`] = `
"<blockquote>
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
    <button type="button" class="tabs-tab-button active" data-tab="2" data-active>test3</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A text 1.</p>
</div>
<div class="tabs-tab-content" data-index="1">
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">sub-test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>sub-test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
</div>
<div class="tabs-tab-content active" data-index="2" data-active="">
<p>A <strong>bold</strong> text 3.</p>
</div>
  </div>
</div>
</blockquote>
"
`;

exports[`tab > nesting > should support nesting with others 2`] = `
"<ul>
<li>
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
    <button type="button" class="tabs-tab-button active" data-tab="2" data-active>test3</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A text 1.</p>
</div>
<div class="tabs-tab-content" data-index="1">
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">sub-test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>sub-test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
</div>
<div class="tabs-tab-content active" data-index="2" data-active="">
<p>A <strong>bold</strong> text 3.</p>
</div>
  </div>
</div>
</li>
</ul>
"
`;

exports[`tab > nesting > should support nesting with others 3`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
    <button type="button" class="tabs-tab-button active" data-tab="2" data-active>test3</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A text 1.</p>
</div>
<div class="tabs-tab-content" data-index="1">
<ul>
<li>
<p>item1</p>
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">sub-test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>sub-test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
</li>
</ul>
</div>
<div class="tabs-tab-content active" data-index="2" data-active="">
<p>A <strong>bold</strong> text 3.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > should handle auto-close 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content" data-index="1">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > should handle auto-close 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content" data-index="1">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > should ignore other markers 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.
@tac</p>
</div>
<div class="tabs-tab-content" data-index="1">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > should not render 1`] = `
"<p>:: tabs
bala bala
@tab test#abc
A <strong>bold</strong> text.
::</p>
"
`;

exports[`tab > should render multiple block 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content" data-index="1">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > should render multiple block 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button" data-tab="1">test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content" data-index="1">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > should render single block 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > should render single block 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;

exports[`tab > should work with multiple instance 1`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
<TestTabs><TestTab><p>A <strong>bold</strong> text 3.</p>
</TestTab><TestTab><p>A <strong>bold</strong> text 4.</p>
</TestTab></TestTabs>"
`;

exports[`tab > should work with multiple instance 2`] = `
"<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test1</button>
    <button type="button" class="tabs-tab-button active" data-tab="1" data-active>test2</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text 1.</p>
</div>
<div class="tabs-tab-content active" data-index="1" data-active="">
<p>A <strong>bold</strong> text 2.</p>
</div>
  </div>
</div>
<TestTabs><TestTab><p>A <strong>bold</strong> text 3.</p>
</TestTab><TestTab><p>A <strong>bold</strong> text 4.</p>
</TestTab></TestTabs>"
`;

exports[`tab > starting correctly > should work with inline tokens ahead 1`] = `
"<p>test</p>
<div class="tabs-tabs-wrapper">
  <div class="tabs-tabs-header">
    <button type="button" class="tabs-tab-button" data-tab="0">test#abc</button>
  </div>
  <div class="tabs-tabs-container">
<div class="tabs-tab-content" data-index="0">
<p>A <strong>bold</strong> text.</p>
</div>
  </div>
</div>
"
`;
